wip: fix layout and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,6 @@
   padding: 2em;
 }
 
-main {
-  height: 100vh;
-}
-
 h1 {
   font-size: 1.3em;
 }
@@ -22,12 +18,11 @@ h1 {
 .header-link {
   color: black;
   text-decoration: none;
-  padding: 0 1em 0 1em;
 }
 
 .menu-icon {
   width: 1.4em;
-  padding: 1em 1em 1em 1em;
+  padding: 1em 0 1em 1em;
 }
 
 .menu-icon:hover {
@@ -45,6 +40,7 @@ h1 {
   width: 13em;
   height: 20em;
   position: absolute;
+  z-index: 1001;
   top: 5em;
   right: 50px;
   background-color: white;
@@ -82,8 +78,7 @@ ul {
   flex-direction: column;
   justify-content: center;
   max-width: 900px;
-  height: 100%;
-  margin: 0 auto 0 auto;
+  padding: 2em;
 }
 
 .category {
@@ -128,8 +123,7 @@ ul {
 ********************************************/
 
 .gallery-container {
-  width: 70%;
-  margin: 15vh auto 0 auto;
+  padding: 2em;
 }
 
 h2 {
@@ -179,8 +173,8 @@ h2 {
   align-items: center;
   height: 5em;
   width: 100vw;
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
+  bottom: 0; */
   border-top: 1px solid lightgrey;
   background-color: white;
   font-size: 0.9em;
@@ -241,6 +235,9 @@ h2 {
   }
 
   @media screen and (min-width: 1023px) {
+    .header {
+      padding: 2em 5em;
+    }
     .menu-icon {
       display: none;
     }
